FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20130315:
AUTHOR: bdrewery@FreeBSD.org

 * USE_QMAIL_RUN, USE_QMAIL_BUILD and WANT_QMAIL have been removed
   and converted into the qmail USE feature

   USES= qmail:run will add qmail into RUN_DEPENDS
   USES= qmail:build will add qmail into BUILD_DEPENDS
   USES= qmail[:both] will add qmail into both RUN and BUILD DEPENDS
   USES= qmail:vars will set QMAIL_PREFIX

20130315:
AUTHOR: bapt@FreeBSD.org

  * Add new Keywords directory and first info.yaml keyword (@info).
  Keywords directory will contain all the custom plist keywords allowing to
  extend pkg-plist with new keywords. Only works with pkgng.

20130307:
AUTHOR: bapt@FreeBSD.org

  * New USES macro to handle on demand features, 2 examples has been added to
    the ports tree:

    pathfix: to replace USE_GNOME= gnomehack
    fuse: to replace USE_FUSE= yes

20130207:
AUTHOR: gahr@FreeBSD.org

  * Use of PTHREAD_CFLAGS and PTHREAD_LIBS is unsupported. The former
    expands to the empty string, while the second is simply -pthread.
    Please use -pthread directly in your LDFLAGS, if needed.

20121214:
AUTHOR: flo@FreeBSD.org

  * Add a USE_FUSE macro to handle fuse dependencies. It makes
    sure sysutils/fusefs-libs gets installed and depending on
    fuse being in base or not it installs sysutils/fusefs-kmod.

20121210:
AUTHOR: bapt@FreeBSD.org
  * OPTIONS has been extended 2 new macros are available:

    OPTIONS_RADIO - allows only 0 or 1 options to be selected
    OPTIONS_GROUP - allows 0 or N options among to be selected

20121010:
AUTHOR: bapt@FreeBSD.org

  * IPV6 option is now activated by default for the whole ports tree

20121010:
AUTHOR: bapt@FreeBSD.org
